# worterbuch-stresstest-ui

./: .gitignore  package-lock.json  package.json
dummygen/: Cargo.toml
dummygen/src/: main.rs
public/: index.html
src/: App.js  index.js
