[package]
name = "dummygen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
worterbuch-client = "0.42.0"
random_word = { version = "0.4.3", features = ["en"] }
tokio = { version = "1.36.0", features = ["full"] }
anyhow = "1.0.80"
